@@ -1,4 +1,4 @@
-/* $Id: server-fn.c,v 1.50 2008-08-28 17:45:27 nicm Exp $ */
+/* $Id: server-fn.c,v 1.51 2009-01-06 15:37:15 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -68,6 +68,8 @@ server_set_client_prompt(
 	c->prompt_callback = fn;
 	c->prompt_data = data;
 
+	c->prompt_hindex = 0;
+
 	c->tty.flags |= (TTY_NOCURSOR|TTY_FREEZE);
 	c->flags |= CLIENT_STATUS;
 }
@@ -82,6 +84,7 @@ server_clear_client_prompt(struct client *c)
 	c->prompt_string = NULL;
 
 	xfree(c->prompt_buffer);
+	c->prompt_buffer = NULL;
 
 	c->tty.flags &= ~(TTY_NOCURSOR|TTY_FREEZE);
 	c->flags |= CLIENT_REDRAW;
